Fixing contact form on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -520,28 +520,5 @@ table {
 }
 
 .contact-bg {
-  background-color: hsla(327, 100%, 50%, 1);
-  background-image:
-    url("data:image/svg+xml,%3Csvg viewBox='0 0 1111 1111' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"),
-    radial-gradient(
-      circle at 0% 99%,
-      hsla(11, 100%, 50%, 1) 0%,
-      transparent 67%
-    ),
-    radial-gradient(
-      circle at 46% 94%,
-      hsla(327, 100%, 50%, 1) 0%,
-      transparent 81%
-    ),
-    radial-gradient(
-      circle at 93% 95%,
-      hsla(236, 100%, 23%, 1) 0%,
-      transparent 66%
-    ),
-    radial-gradient(
-      circle at 89% 8%,
-      hsla(206, 100%, 9%, 1) 0%,
-      transparent 150%
-    );
-  background-blend-mode: overlay, normal, normal, normal, normal;
+background-image: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
 }
